[gd_scene load_steps=3 format=3 uid="uid://system_space_scene"]

[ext_resource type="Script" path="res://scenes/system_space/system_space.gd" id="1" uid="uid://system_space_script"]
[ext_resource type="Script" path="res://packages/gameplay/ship_controller.gd" id="2" uid="uid://ship_controller_script"]

[sub_resource type="Environment" id="Environment_space"]
background_mode = 1
background_color = Color(0.01, 0.01, 0.02, 1)
ambient_light_source = 1
ambient_light_color = Color(0.1, 0.1, 0.15, 1)
ambient_light_energy = 0.3

[sub_resource type="SphereMesh" id="SphereMesh_star"]
radius = 2.0
height = 4.0

[node name="SystemSpace" type="Node3D"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_space")

[node name="StarMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_star")

[node name="Ship" type="Node3D" parent="."]
script = ExtResource("2")
max_speed = 500.0
boost_multiplier = 3.0
acceleration = 200.0
rotation_speed = 2.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="BackButton" type="Button" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 45.0
text = "< Back to Galaxy"

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 200.0

[node name="SystemLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "System Name"

[node name="TargetLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 80.0
offset_right = 500.0
offset_bottom = 105.0
theme_override_colors/font_color = Color(0.9, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "Target: None [T to cycle]"

[node name="SpeedLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 110.0
offset_right = 400.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "Speed: 0 km/h (0%)"

[node name="ControlsLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -60.0
offset_right = 350.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Mouse: Steer | W/S: Throttle | A/D: Strafe | Shift: Boost | Q/E: Roll | T: Target | F: Land | M: Map | ESC: Back"
horizontal_alignment = 1
